<resources>
    <string name="app_name">Football</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="League">league</string>
    <string name="Leagues">leagues</string>
    <string name="standings">Standings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="season">season</string>
    <string name="country">country</string>
    <string name="search">Search</string>
    <string name="teamName">team</string>
    <string name="play">play</string>
    <string name="win">win</string>
    <string name="lose">lose</string>
    <string name="draw">draw</string>
    <string name="diff">diff</string>
    <string name="points">points</string>
    <string name="time">Time</string>
    <string name="fixture">Fixture</string>
    <string name="soccer">Soccers</string>
    <string name="news">News</string>
</resources>
