<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.leaguefragments.StandingsFragment">


    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/teamName"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/play"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/win"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/draw"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lose"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="+/-"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/diff"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.3"
            android:gravity="center"
            android:text="@string/points"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/textSize" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvStandings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintVertical_bias="0.00999999" />

</LinearLayout>